# gs1-bridge-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  server.json  server.py
tests/: test_server.py
