[project]
name = "gs1-bridge-mcp"
version = "0.1.0"
description = "Bridge GS1 / EPCIS supply-chain identity + traceability to ONE OS — parse, map, govern (EU Digital Product Passport / food safety). CSOAI Layer-0 legacy-bridge family."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CSOAI-ORG"}]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]
[project.scripts]
gs1-bridge-mcp = "server:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
